# passwordless-python

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/: renovate.json
.github/workflows/: cd.yml  ci.yml
examples/flask/: .env.example  .gitignore  README.md  pyproject.toml
examples/flask/example-rest-requests/: 2023-09-09T220829.200.json  2023-09-09T221057.200.json  2023-09-09T221245.200.json  2023-09-09T221423.200.json  2023-09-09T221516.200.json  passwordless-api.http
examples/flask/flaskr/: __init__.py  config.py  passwordless.py  passwordless_api.json  passwordless_api.py  passwordless_api_config.py  passwordless_bp.py
examples/flask/flaskr/static/: client-register.js  client-signin.js  debug.js
examples/flask/flaskr/templates/: passwordless.html
examples/streamlit/: README.md  app.py  passwordless_api.py  pyproject.toml
examples/streamlit/.streamlit/: config.toml  secrets.toml
examples/streamlit/pages/: 1_sign_in.py  2_register.py
examples/streamlit/passwordless_auth/: __init__.py
examples/streamlit/passwordless_auth/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/streamlit/passwordless_auth/frontend/src/: main.js
src/: main.py  test.py
src/passwordless/: __init__.py  client.py  config.py  errors.py  models.py  serialization.py
tests/: data_factory.py  http_utils.py  test_client.py  test_client_builder.py  test_config.py  test_models.py
