[tool.poetry]
name = "passwordless"
version = "2.0.0"
description = "Passwordless.dev Python SDK"
authors = [
    "Bitwarden <hello@bitwarden.com>"
]
maintainers = [
    "Maciej Zieniuk <zieniuk.maciej@gmail.com>"
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: FIDO",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["passwordless", "bitwarden"]
homepage = "https://bitwarden.com/products/passwordless"
documentation = "https://docs.passwordless.dev/guide"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2"
marshmallow = "^3"
python-dateutil = "^2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.2.2"
flake8 = "7.3.0"
black = "26.5.1"
mypy = "1.20.2"
isort = "5.13.2"
pre-commit = "4.6.0"
pre-commit-hooks = "5.0.0"
types-requests = "2.33.0.20260518"
docformatter = {extras = ["tomli"], version = "1.7.8", python = ">=3.10,<4.0"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "9.1.1"
pytest-mock = "3.15.1"
pytest-httpserver = "1.1.5"

[tool.mypy]
python_version = "3.10"
files = ["src/passwordless"]
exclude = ["venv", "tests", "examples"]
show_error_codes = true
pretty = true
strict = true

[[tool.mypy.overrides]]
module = [
    "asgiref.*",
    "dotenv.*",
    "cryptography.*",
    "importlib_metadata",
]
ignore_missing_imports = true

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.docformatter]
black = true
recursive = true
wrap-descriptions = 72
wrap-summaries = 72
blank = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
