[tool.poetry]
name = "passwordless-example-streamlit"
version = "1.0.0"
description = "Passwordless.dev Python SDK usage Example"
authors = [
    "Bitwarden <hello@bitwarden.com>"
]
maintainers = [
    "Maciej Zieniuk <zieniuk.maciej@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
passwordless = { path = "../../" }
streamlit = "1.38.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "*"
watchdog = "*"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
